--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "firebase": "^10.6.0",
     "firebase-admin": "^11.11.1",
+    "jwt-decode": "^4.0.0",
     "nodemailer": "^6.9.7"
   }
 }
