--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.BasaliProject"
         tools:targetApi="31">
         <activity
-            android:name=".ui.scan.CameraActivity"
+            android:name=".ui.scan.scanner.CameraActivity"
             android:exported="false" />
         <activity
             android:name=".ui.confirm.ConfirmationActivity"
