migrate to full using firebase Admin SDK and update all logics

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,13 @@
 #app config
-APP_PORT=3432872547
+APP_PORT=3000
 
 #gmail service acc
 APP_GMAIL_EMAIL="example@gmail.com"
 APP_GMAIL_PASSWORD="examplepassword"
 
-#firebase config
-FIREBASE_API_KEY=example
-FIREBASE_AUTH_DOMAIN=example
-FIREBASE_PROJECT_ID=example
-FIREBASE_STORAGE_BUCKET=example
-FIREBASE_MESSAGING_SENDER_ID=example
-FIREBASE_APP_ID=example
-FIREBASE_MEASUREMENT_ID=example
+#gcloud project id
+APP_PROJECT_ID="project-isi-id"
+APP_BUCKET_NAME="gakhabishabis"
+
+#basali model
+APP_MODEL_URL="https://storage.valorant.com/model.json"
